# nanobind_namedtuple

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: nanobind_namedtuple.cmake
docs/: design.md
examples/: CMakeLists.txt  __init__.py  hello.cpp  hello.pyi
include/nanobind_namedtuple/: named_tuple.h
stubgen/: README.md
stubgen/nanobind_namedtuple_stubgen/: __init__.py  __main__.py
tests/: conftest.py  test_cmake_helper.py  test_free_threading.py  test_hardening.py  test_hello.py  test_match_args_pattern.py  test_namedtuple_surface.py  test_stubgen.py
