[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nanobind_namedtuple"
version = "0.0.1"
description = "namedtuple support for nanobind"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Jérémie Dumas" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["nanobind >=2.2.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/jdumas/nanobind_namedtuple"
Source = "https://github.com/jdumas/nanobind_namedtuple"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.15"
cmake.build-type = "Release"
build.verbose = true
logging.level = "INFO"
wheel.py-api = "cp312"
wheel.packages = ["stubgen/nanobind_namedtuple_stubgen"]

[tool.scikit-build.cmake.define]
NBNT_BUILD_EXAMPLES = "ON"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
